# Custom-Shell

./: .gitignore  CMakeLists.txt  Ideas.md  README.md
src/: commands.cpp  commands.hpp  executables.cpp  executables.hpp  main.cpp  shell_builtin_commands.cpp  shell_builtin_commands.hpp  utils.cpp  utils.hpp  variables.hpp
src/builtin_commands/: CMakeLists.txt  builtin_commands.cpp  builtin_commands.hpp
src/executables/: CMakeLists.txt  executables.cpp  executables.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
src/variables/: CMakeLists.txt  variables.cpp  variables.hpp
